FIX: sidebar scrollable if it doesn't fit in screen

--- a/src/client/src/style/cinemol/index.css
+++ b/src/client/src/style/cinemol/index.css
@@ -34,9 +34,7 @@
     align-items: center;
 }
 
-.cinemol-viewer {
-    width: 50%;
-}
+.cinemol-viewer {}
 
 .grayed-out {
     filter: grayscale(100%);
@@ -62,16 +60,16 @@
 }
 
 .cinemol-sidebar-toggle {
-    position: absolute;
+    position: relative;
     top: 55%;
-    right: -30px;
+    right: -250px;
     height: 50px;
     width: 30px;
-    z-index: 1;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background-color: lightgray;
     cursor: pointer;
+    z-index: 9998;
 }
 
 .cinemol-sidebar-toggle-icon {
@@ -92,6 +90,7 @@
     height: 100%;
     transition: left 0.3s ease-in-out;
     background-color: lightgray;
+    overflow-y: scroll;
 }
 
 .cinemol-sidebar.open {
@@ -117,7 +116,7 @@
 
 .cinemol-sidebar-button {
     width: 100%; 
-    height: 50px;
+    height: 40px;
     padding: 10px;
     text-align: left;
     font-family: Arial, Helvetica, sans-serif;
@@ -148,7 +147,7 @@
 .cinemol-sidebar-counter-container {
     width: calc(100% - 20px);
     font-family: Arial, Helvetica, sans-serif;
-    height: 30px;
+    height: 20px;
     text-align: left; 
     padding: 10px;
     border: none;
